fixed spacing issue social media

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -245,7 +245,10 @@ html {
 #tour-dates {
     text-align: center;
 }
- 
+
+.reach-us {
+    margin-top:30px;
+} 
 /*--------------------newsletter & contact us---------------*/
     
 
